LU-4098 lmv: kernel crash due to misconfigured MDT

There are few places with access to lmv->tgts[] without check for NULL.
Usually it may happens when MDT configured starting from index 1
instead of 0. For example:
  mkfs.lustre --reformat --mgs --mdt --index=1 /dev/sdd1

Lustre-commit: caa70178a413c84c400e875866cdbbd368df4758
Lustre-change: http://review.whamcloud.com/7941

Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Signed-off-by: Bob Glossman <bob.glossman@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Alex Zhuravlev <alexey.zhuravlev@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>
Change-Id: Ieccedcfe7a3a18cb649ef739a077338a8a1b8855
Reviewed-on: http://review.whamcloud.com/9347
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>